deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zarf-vite-template
  labels:
    app: zarf-vite-template
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: zarf-vite-template
